ana ve yan ürünler düzenlendi

--- a/icecek.html
+++ b/icecek.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BRAND</title>
     <link rel="stylesheet" href="index.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -68,7 +68,7 @@
         
         </div>
         <div style="width: 400px;">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum odit reprehenderit eum ea, quisquam dolores ex dolor? Accusantium illo vel culpa temporibus est, fugit quis?</p>
+            <p>Espresso ve sıcak sütün kaynatılmasıyla hazırlanan kahve çeşidi. <br>Latteye göre daha fazla süt köpüğü ile servis edilir.</p>
         </div>
     </div1>
 
