--- a/tatli.html
+++ b/tatli.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BRAND</title>
     <link rel="stylesheet" href="index.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -68,7 +68,7 @@
         
         </div>
         <div style="width: 400px;">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum odit reprehenderit eum ea, quisquam dolores ex dolor? Accusantium illo vel culpa temporibus est, fugit quis?</p>
+            <p>Pandispanya üzerine, tablodan seçtiğiniz malzeme ile oluşturulan krema ile kaplanıp tablodan seçeceğiniz malzemeler ve krema ile süslenerek servis edilir.</p>
         </div>
     </div1>
 
@@ -200,22 +200,31 @@
           padding-bottom: 50px;
         ">
         <span class="highlightTatli">CHEESECAKE</span>  <br><br>
-        Çikolata aromalı latte çeşidi. <br>
-        Üzerine süt köpüğü konularak servis edilir. <br>
-        İsteğe bağlı olarak rende çikolata ile de sipariş edebilirsiniz. (Ücrete dahildir)
+        Alt tabaka ince bir ufalanmış bisküvi katmanından oluşur. <br>
+        Ana ve en kalın katman; yumuşak, taze peynir, yumurta ve şeker katmanından oluşur. <br>
+        Üzeri, dilediğiniz sos ve krema ile ile süslenip servis edilir. <br> 
 
         <span class="highlightTatli">PANKEK</span><br><br>
-        Sütü bol kahve çeşidi. <br>
-        Espresso üzerine süt ve süt kreması eklenerek yapılır.
-        İsteğe bağlı olarak süt köpüğü ile servis edilir. <br>
+        Nişasta bazlı; yumurta, süt ve tereyağı içeren, ince ve yuvarlak bir hamur işi tatlısıdır. <br>
+        Üzerine dilediğinis sos dökülerek, krema ve tablodan seçeceğiniz meyveler ile süslenerek servis edilir. <br>
+        (İlk meyve ve sos fiyata dahildir. ) <br>
+        (İkinci ve daha sonraki ekstra istekleriniz, ektra olarak ücretlendirilecektir.) <br>
+
 
         <span class="highlightTatli">KRUVASAN</span><br><br>
-        Espresso kaynatma yöntemi ile hazırlanan sert bir kahve çeşidi. <br>
-        Tek servis edilir. <br>
+        Bol tereyağı ile yapılan, kat kat, hilal şeklinde tatlı çörek. <br>
+        Krema ve tablodan seçeceğiniz meyveler ile süslenerek servis edilir. <br>
+        (İlk meyve ve sos fiyata dahildir. ) <br>
+        (İkinci ve daha sonraki ekstra istekleriniz, ektra olarak ücretlendirilecektir.) <br>
+
+
+       
 
         <span class="highlightTatli">MAGNOLYA</span><br><br>
-        Eritilmiş çikolata, toz kakao, sıcak süt ve şeker içeren sıcak içecek. <br>
-        İsteğe bağlı olarak marshmallow ile süslenerek servis edilir. (Ek ücret gerektirir.)
+        Krema, süt ve yumurta gibi ana malzemelerle hazırlanan hafif bir tatlıdır. <br>
+        Tatlı, yumuşak bir pandispanya keki tabanına sahiptir ve üzeri dolgun bir kremayla kaplanır. <br>
+        Üzeri ve içi tablodan seçeceğiniz meyvelerle birleştirilerek sunulur. <br>
+        Soğuk servis edilir. <br>
 
     </p>
   </div>
